--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ server/Optika.API/.vs/
 **/obj/
 *.DS_Store
 .metadata
+server/Optika.API/.vs/Optika.API/DesignTimeBuild/.dtbcache.v2
+server/Optika.API/.vs/Optika.API/DesignTimeBuild/.dtbcache.v2
+server/Optika.API/.vs/Optika.API/v17/.suo
+server/Optika.API/.vs/Optika.API/DesignTimeBuild/.dtbcache.v2
+server/Optika.API/.vs/Optika.API/v17/.suo
+server/Optika.API/.vs/Optika.API/v17/DocumentLayout.json
+server/Optika.API/.vs/Optika.API/DesignTimeBuild/.dtbcache.v2
