--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: 1.3.0
+  # Для сериализации JSON в модели, можно использовать 'json_serializable'
+  json_annotation: ^4.4.0
+  # Поддержка json_serializable (генерация кодов)
+  build_runner: ^2.3.3
+  json_serializable: ^6.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
