--- a/server/Optika.API/Optika.API/appsettings.json
+++ b/server/Optika.API/Optika.API/appsettings.json
@@ -8,5 +8,11 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=optika_db;Username=postgres;Password=123"
+    },
+    "Jwt": {
+        "Key": "iYajerk0FFv430av720nadaVshkoluschool)",
+        "Issuer": "optika.api",
+        "Audience": "optika.client"
     }
+
 }
