--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   json_serializable: ^6.1.4
   provider: ^6.1.1
   cupertino_icons: ^1.0.8
+  flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.5.3
+
 
 dev_dependencies:
   flutter_test:
